--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -11,7 +11,7 @@
                         <div class="md-toolbar-tools">
                             <span>Schedule Drafts</span>
                             <span flex></span>
-                            <md-button md-theme="default" aria-label="Create A Draft" style="margin-right: 17px;" class="md-fab md-primary md-button-fab-small" ng-click="vm.addDraftSchedule()">
+                            <md-button md-theme="default" aria-label="Create A Draft" style="margin-right: 17px;" class="" ng-click="vm.addDraftSchedule()">
                                 <span class="fa fa-plus"></span>
                                 <md-tooltip>Create A Schedule Draft</md-tooltip>
                             </md-button>
