--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="bower_components/angular-material/themes/blue-theme.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-material/themes/light-blue-dark-theme.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-material/themes/red-theme.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/angular-material/themes/amber-theme.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-material/themes/green-theme.css" rel="stylesheet" type="text/css">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
