--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,4 +1,4 @@
-<section layout-align="center center" class="navigation-buttons" md-theme="blue">
+<section layout-align="center center" class="navigation-buttons" md-theme="{{vm.themePrimaryButtons}}">
 
     <md-button aria-label="Operator Control" class="md-raised md-primary" ng-click="vm.stateGo('operatorControl')">Operator Control</md-button>
     <md-button aria-label="Alarms" class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
