--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -10,7 +10,7 @@
                     <md-tooltip>Select All Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons">
                     <md-button ng-click="vm.knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
                     <md-button ng-click="vm.acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
                     <md-button ng-click="vm.clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
@@ -89,7 +89,7 @@
                     <md-tooltip>Select All Known Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons">
                     <md-button ng-click="vm.cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
