--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -6,7 +6,7 @@
                 <span>Operator Controls</span>
             </div>
         </md-toolbar>
-        <section md-theme="blue" layout="horizontal" layout-align="center center" class="panel-body panel-operator-controls">
+        <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="panel-body panel-operator-controls">
             <md-button ng-click="vm.inhibitAll()" aria-label="Inhibit All" class="md-raised md-primary">Inhibit All</md-button>
             <md-button ng-click="vm.stowAll()" aria-label="Stow All" class="md-raised md-primary">Stow All</md-button>
             <md-button ng-click="vm.stopAll()" aria-label="Stop All" class="md-raised md-primary">Stop All</md-button>
