--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -10,12 +10,11 @@
                     <md-tooltip>Select All Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons" md-theme-watch="true">
                     <md-button ng-click="vm.knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
                     <md-button ng-click="vm.acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
                     <md-button ng-click="vm.clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared Alarms</md-checkbox>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showLargeAlarms" aria-label="Show Detailed Alarm Notifications">Show Detailed Alarm Notifications</md-checkbox>
                     <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="vm.q" label="Search Alarms..."></md-text-float>
                 </section>
             </div>
@@ -89,7 +88,7 @@
                     <md-tooltip>Select All Known Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                <section md-theme="{{themePrimaryButtons}}" layout="horizontal" layout-align="center center" class="alarms-buttons" md-theme-watch="true">
                     <md-button ng-click="vm.cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
